[project]
name = "heytaxi-pythonversion"
version = "0.1.0"
description = ""
authors = [
    {name = "Parsa",email = "seyedparsad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
